bindata/network-policy/spire-server/spire-server-allow-egress-ingress-to-federation-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spire-server-allow-egress-ingress-to-federation
  namespace: zero-trust-workload-identity-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: spire-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow federation traffic
    - ports:
        - protocol: TCP
          port: 8443
  egress:
    - ports:
        - protocol: TCP
          port: 8443
