bindata/network-policy/spire-server/spire-server-allow-egress-to-api-server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spire-server-allow-egress-to-api-server
  namespace: zero-trust-workload-identity-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: spire-server
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
